# openai-zendeskmcp

./: .env.example  Dockerfile  PATCH_SERVER_SAFETY.py  README.md  pyproject.toml
tests/: test_server.py
zendesk_mcp_server/: server.py  server.py.new  server_safety_patch.py
